--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   ],
   "dependencies": {
     "fs-extra": "^8.1.0",
+    "glob": "^8.0.3",
     "schema-utils": "^2.6.1",
     "webpack": "^5.17.0",
     "webpack-sources": "^1.4.3"
